# CS642-Spring-2020

./: .gitattributes  .gitignore  README.md
HW1/: .gitignore  README.md  attack.py  attack.sh  baddecrypt.py  badencrypt.py  cracking.py  cracking_extra.py  cracking_simple.py  solutions.md  solutions.txt
HW2/: BoxesX.ova  README.md  a.txt  b.html  c.html
HW2/zoobar/db/: zoobar.db
HW2/zoobar/www/includes/: common.php
HW3/1_wireshark/: solutions.txt
HW3/2_attack/: scanner.py
HW4/: Boxes2-disk1.vmdk  CMakeLists.txt
HW4/sploits/: .gdbinit  ID  sploit0.c  sploit1.c  sploit2.c  sploit3.c  sploit4.c
HW5/: README.md
