cmake_minimum_required(VERSION 3.10)

project(HW4)

add_executable(target0 targets/target0.c)
add_executable(target1 targets/target1.c)
add_executable(target2 targets/target2.c)
add_executable(target3 targets/target3.c)
add_executable(target4 targets/target4.c)

add_executable(sploit0 sploits/sploit0.c)
add_executable(sploit1 sploits/sploit1.c)
add_executable(sploit2 sploits/sploit2.c)
add_executable(sploit3 sploits/sploit3.c)
add_executable(sploit4 sploits/sploit4.c)
